# bangumi-data-rs

./: Cargo.toml  README.md  flake.nix
data/: dist.json
src/: lib.rs
