[package]
name        = "bangumi-data"
version     = "0.1.2"
edition     = "2021"
license     = "MIT"
author      = ["George Miao <gm@miao.dev>"]
description = "Rust binding for bangumi data"
repository  = "https://github.com/George-Miao/bangumi-data-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom        = "7.1.3"
serde_json = "1.0.111"

serde   = { version = "1.0.195", features = ["derive"] }
iso8601 = { version = "0.6.1", features = ["serde"] }
reqwest = { version = "0.11.23", optional = true, features = ["json"] }

[features]
default = ["reqwest"]
reqwest = ["dep:reqwest"]

[dev-dependencies]
tokio = { version = "1.35.1", features = ["macros"] }
